# mongodb-rust-api

./: Cargo.toml  README.md
examples/: small.rs
src/: api.rs  composites.rs  connect.rs  lib.rs  server.rs
src/composites/: primatives.rs
src/tests/: mod.rs  pubg_time.rs
src/tests/pubg_time/: composites.rs
src/tests/pubg_time/composites/: primatives.rs
tests/: mod.rs
