[package]
name = "mongodb_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "2.0.1"
default-features = false
features = ["sync"]

[dependencies]
serde = "1.0.130"
indicatif = "0.16.2"
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.9.0"